--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -222,7 +222,7 @@
                         table.row.add([
                             element.project_id,
                             element.project_name,
-                            element.dep_name,
+                            element.department_name,
                             element.supervisor,
                             element.proj_priority,
                             element.needed_fte,
