--- a/GUI/04_departmentOV.html
+++ b/GUI/04_departmentOV.html
@@ -133,8 +133,8 @@
         data.department.forEach(element => {
             table.row.add([  
                 element.department.department_id,
-                element.department.name,
-                element.department.description
+                element.department.dep_name,
+                element.department.dep_description
             ]).draw();
         });
     })
