--- a/GUI/05_adressOV.html
+++ b/GUI/05_adressOV.html
@@ -140,7 +140,7 @@
                 element.address.company,
                 element.address.street,
                 element.address.house_number,
-                element.address.zip,
+                element.address.postcode,
                 element.address.city,
                 element.address.country
             ]).draw();
