--- a/GUI/02_personalOV.html
+++ b/GUI/02_personalOV.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="/assets/css/styles.min.css?h=1efc71b03721ab3a65e5f675122c74d0">
-
 </head>
 
 <body><!-- Start: Navbar With Button -->
@@ -35,7 +34,8 @@
                                 href="/10_experienceLevelOV.html">Erfahrungsstufen</a></div>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="/11_searchPage.html">Suche</a></li>
-                </ul><a class="navbar-brand d-flex align-items-center" href="/index.html"><span>
+                </ul><a class="navbar-brand d-flex align-items-center" href="/index.html"
+                    onclick="clearStorage()"><span>
                         <img src="/assets/img/logout.png?h=199e5cad613b031525576a5c217e8b00" alt="Navigation Icon"
                             height="30px" ;>
                     </span></a>
@@ -77,7 +77,6 @@
             <div id="success-message" class="success-message" style="display: none;"></div>
         </div>
     </div>
-
     <div class="orgTable" style="z-index: 1;">
 
         <button class="btn  text-truncate  float-sm-none add-another-btn" type="button" onclick="openPopup()"><span
@@ -151,7 +150,7 @@
         </div>
     </footer><!-- End: Footer Multi Column -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/script.min.js?h=b91e3222b91e1d5c812614a4f089d4e9"></script>
+    <script src="/assets/js/script.min.js?h=c0a95793cc5a591cf7607ae2a6492c6a"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
@@ -213,6 +212,5 @@
     .catch(error => console.error('Error fetching data:', error));
 });
 </script></body>
-
 
 </html>
