--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -34,7 +34,8 @@
                                 href="/10_experienceLevelOV.html">Erfahrungsstufen</a></div>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="/11_searchPage.html">Suche</a></li>
-                </ul><a class="navbar-brand d-flex align-items-center" href="/index.html"><span>
+                </ul><a class="navbar-brand d-flex align-items-center" href="/index.html"
+                    onclick="clearStorage()"><span>
                         <img src="/assets/img/logout.png?h=199e5cad613b031525576a5c217e8b00" alt="Navigation Icon"
                             height="30px" ;>
                     </span></a>
@@ -173,7 +174,9 @@
         </div>
     </footer><!-- End: Footer Multi Column -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/script.min.js?h=b91e3222b91e1d5c812614a4f089d4e9"></script>
+    <script src="/assets/js/script.min.js?h=c0a95793cc5a591cf7607ae2a6492c6a"></script>
+
+ <script src="/assets/js/script.min.js?h=b91e3222b91e1d5c812614a4f089d4e9"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
@@ -245,7 +248,6 @@
             const year = date.getFullYear();
             return `${day}.${month}.${year}`;
         }
-    </script>
-</body>
+    </script></body>
 
 </html>
