--- a/GUI/08_jobOV.html
+++ b/GUI/08_jobOV.html
@@ -7,7 +7,6 @@
   <title>Cioban</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/assets/css/styles.min.css?h=1efc71b03721ab3a65e5f675122c74d0">
-
 </head>
 
 <body><!-- Start: Navbar With Button -->
@@ -32,7 +31,7 @@
                 class="dropdown-item" href="/10_experienceLevelOV.html">Erfahrungsstufen</a></div>
           </li>
           <li class="nav-item"><a class="nav-link" href="/11_searchPage.html">Suche</a></li>
-        </ul><a class="navbar-brand d-flex align-items-center" href="/index.html"><span>
+        </ul><a class="navbar-brand d-flex align-items-center" href="/index.html" onclick="clearStorage()"><span>
             <img src="/assets/img/logout.png?h=199e5cad613b031525576a5c217e8b00" alt="Navigation Icon" height="30px" ;>
           </span></a>
       </div>
@@ -103,7 +102,7 @@
     </div>
   </footer><!-- End: Footer Multi Column -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/js/script.min.js?h=03d850271fbe644a372b482c115c8df8"></script>
+  <script src="/assets/js/script.min.js?h=c0a95793cc5a591cf7607ae2a6492c6a"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
   <script>
