--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -241,14 +241,12 @@
 
 // Funktion zur Formatierung des Datums (YYYY-MM-DD in DD.MM.YYYY)
 function formatDate(dateString) {
-    if (!dateString) return ""; // Überprüfen, ob das Datum vorhanden ist
+    if (!dateString) return ""; // Check if the date is present
     const parts = dateString.split('-');
-    console.log(parts);
-    console.log(parts[2]+"."+parts[1]+"."+parts[0]);
     const day = parts[2];
     const month = parts[1];
     const year = parts[0];
-    return parts[2]+"."+parts[1]+"."+parts[0];
+    return `${day}.${month}.${year}`;
 }
 </script>
     </body>
