try project table by bootstarp

--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -177,7 +177,7 @@
     <script src="/assets/js/script.min.js?h=c0a95793cc5a591cf7607ae2a6492c6a"></script>
 
  <script src="/assets/js/script.min.js?h=b91e3222b91e1d5c812614a4f089d4e9"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+ <!--    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
     <script>
@@ -248,7 +248,7 @@ function formatDate(dateString) {
     const year = parts[0];
     return `${day}.${month}.${year}`;
 }
-</script>
+</script> -->
     </body>
 
 </html>
