--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -125,7 +125,7 @@
  <script src="/assets/js/script.min.js?h=b91e3222b91e1d5c812614a4f089d4e9"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <!-- <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script> -->
     <script>
   /*  $(document).ready(function() {
     var priorityValues = {
