--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -125,9 +125,9 @@
  <script src="/assets/js/script.min.js?h=b91e3222b91e1d5c812614a4f089d4e9"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <!-- <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script> -->
+    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
     <script>
-  /*  $(document).ready(function() {
+   $(document).ready(function() {
     var priorityValues = {
         'gering': 1,
         'niedrig': 2,
@@ -160,33 +160,32 @@
             }
         ]
     });
- */
- fetch("https://cioban.de/api/project")
-    .then(response => response.json())
-    .then(data => {
-        console.log(data);
-        let table = document.getElementById('projectTable'); // Element mit ID 'projectTable' auswählen
-        data.project.forEach(element => {
-            let startdate = formatDate(element.start_date);
-            let enddate = formatDate(element.end_date);
-            let newRow = table.insertRow(); // Neue Zeile einfügen
-            newRow.innerHTML = `
-                <td>${element.project_id}</td>
-                <td>${element.project_name}</td>
-                <td>${element.department_name}</td>
-                <td>${element.supervisor}</td>
-                <td>${element.proj_priority}</td>
-                <td>${element.needed_fte}</td>
-                <td>${element.current_fte}</td>
-                <td>${startdate}</td>
-                <td>${enddate}</td>
-            `;
-        });
-    })
-    .catch(error => console.log(error));
-// });
 
-/* // Funktion zur Formatierung des Datums (YYYY-MM-DD in DD.MM.YYYY)
+    fetch("https://cioban.de/api/project")
+        .then(response => response.json())
+        .then(data => {
+            console.log(data);
+            let table = $('#projectTable').DataTable();
+            data.project.forEach(element => {
+                let startdate = formatDate(element.start_date);
+                let enddate = formatDate(element.end_date);
+                table.row.add([
+                    element.project_id,
+                    element.project_name,
+                    element.department_name,
+                    element.supervisor,
+                    element.proj_priority,
+                    element.needed_fte,
+                    element.current_fte,
+                    startdate,
+                    enddate
+                ]).draw();
+            });
+        })
+        .catch(error => console.log(error));
+});
+
+// Funktion zur Formatierung des Datums (YYYY-MM-DD in DD.MM.YYYY)
 function formatDate(dateString) {
     if (!dateString) return ""; // Check if the date is present
     const parts = dateString.split('-');
@@ -194,7 +193,7 @@ function formatDate(dateString) {
     const month = parts[1];
     const year = parts[0];
     return `${day}.${month}.${year}`;
-} */
+}
 </script>
     </body>
 
