--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -127,7 +127,7 @@
 
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
     <script>
-   $(document).ready(function() {
+/*    $(document).ready(function() {
     var priorityValues = {
         'gering': 1,
         'niedrig': 2,
@@ -193,7 +193,188 @@ function formatDate(dateString) {
     const month = parts[1];
     const year = parts[0];
     return `${day}.${month}.${year}`;
+} */
+
+
+
+var selectedProjectId;
+
+document.addEventListener('DOMContentLoaded', function() {
+    var priorityValues = {
+        'gering': 1,
+        'niedrig': 2,
+        'mittel': 3,
+        'hoch': 4
+    };
+
+    var table = $('#projectTable').DataTable({
+        "paging": false,
+        "searching": false,
+        "info": false,
+        "columnDefs": [
+            {
+                "targets": [7, 8],
+                "render": function ( data, type, row ) {
+                    if (type === 'display') {
+                        return formatDate(data);
+                    }
+                    return data;
+                }
+            },
+            {
+                "targets": 3,
+                "render": function ( data, type, row ) {
+                    if (type === 'sort') {
+                        return priorityValues[data];
+                    }
+                    return data;
+                }
+            }
+        ]
+    });
+
+    var popupContainer = document.getElementById('popupContainer-project');
+    var popupContent = document.getElementById('popupContent-project');
+    var rowDataDiv = document.getElementById('rowData-project');
+    var closeBtn = document.getElementById('closeBtn-project');
+
+    popupContent.style.padding = '40px';
+    popupContent.style.borderRadius = '20px';
+    popupContent.style.fontSize = '16px';
+    popupContent.style.border = '1px solid lightgrey';
+    popupContent.style.borderRadius = '5px';
+
+    $('#projectTable tbody').on('click', 'tr', function () {
+        selectedProjectId = $(this).find('td:first').text();
+        var rowData = '';
+        $(this).find('td').each(function() {
+            rowData += $(this).text() + '<br>';
+        });
+        rowDataDiv.innerHTML = rowData;
+        popupContainer.style.display = 'block';
+    });
+
+    closeBtn.onclick = function() {
+        popupContainer.style.display = 'none';
+    };
+
+    fetch("https://cioban.de/api/project")
+        .then(response => response.json())
+        .then(data => {
+            let table = $('#projectTable').DataTable();
+            data.project.forEach(element => {
+                let startdate = formatDate(element.start_date);
+                let enddate = formatDate(element.end_date);
+                table.row.add([
+                    element.project_id,
+                    element.project_name,
+                    element.department_name,
+                    element.supervisor,
+                    element.proj_priority,
+                    element.needed_fte,
+                    element.current_fte,
+                    startdate,
+                    enddate
+                ]).draw();
+            });
+        })
+        .catch(error => console.log(error));
+});
+
+function formatDate(dateString) {
+    if (!dateString) return "";
+    const parts = dateString.split('-');
+    const day = parts[2];
+    const month = parts[1];
+    const year = parts[0];
+    return `${day}.${month}.${year}`;
 }
+
+function openProjectEditPersonalPopup() {
+    document.getElementById("popup-container-projectEditPersonal").style.display = "block";
+    document.getElementById("popupContent-project").style.display = "none";
+    updateProjectEditPersonalInputs();
+}
+
+function closeEditPersonalPopup() {
+    document.getElementById("popup-container-projectEditPersonal").style.display = "none";
+    document.getElementById("popupContent-project").style.display = "block";
+    document.getElementById("error-message-project").style.display = "none";
+}
+
+function updateProjectEditPersonalInputs() {
+    var auswahl = document.getElementById("auswahl-projectEditPersonal").value;
+    var eingabefelderDiv = document.getElementById("eingabefelder-projectEditPersonal");
+    eingabefelderDiv.innerHTML = ""; 
+    if (auswahl === "anzeigen") {
+        fetch(`https://cioban.de/api/project/employee/${selectedProjectId}`)
+            .then(response => response.json())
+            .then(data => {
+                var table = "<table style='overflow:auto'><tr><th>ID</th><th>Vorname</th><th>Name</th><th>Freie FTE</th><th>Mail</th><th>Tel. Nummer</th><th>Beschäftigungsstart</th><th>Erfahrungsgrad</th><th>Typ</th><th>Teams</th></tr>";
+                data.employee.forEach(person => {
+                    table += "<tr>";
+                    table += "<td>" + person.employee_id + "</td>";
+                    table += "<td>" + person.first_name + "</td>";
+                    table += "<td>" + person.last_name + "</td>";
+                    table += "<td>" + person.free_fte+ "</td>";
+                    table += "<td>" + person.e_mail + "</td>";
+                    table += "<td>" + person.phone_number + "</td>"; 
+                    table += "<td>" + person.entry_date + "</td>";
+                    table += "<td>" + person.exp_lvl_description + "</td>";
+                    table += "<td>" + person.type_name + "</td>";
+                    table += "<td>" + person.team_name + "</td>";
+                    table += "</tr>";
+                });
+                table += "</table>";
+                eingabefelderDiv.innerHTML = table;
+            })
+            .catch(error => console.log(error));
+    } else if (auswahl === "hinzufügen") {
+        var IdInput = document.createElement("input");
+        IdInput.type = "text";
+        IdInput.placeholder = "Projekt ID";
+        IdInput.value = selectedProjectId;
+        eingabefelderDiv.appendChild(IdInput);
+        
+        var employeeId = document.createElement("input");
+        employeeId.type = "text";
+        employeeId.placeholder = "Mitarbeiter ID";
+        eingabefelderDiv.appendChild(employeeId);
+    } else if (auswahl === "löschen") {
+        var idInput = document.createElement("input");
+        idInput.type = "text";
+        idInput.placeholder = "ID";
+        eingabefelderDiv.appendChild(idInput);
+    }
+} 
+
+function applyEditPersonalChanges() {
+    var inputs = document.querySelectorAll('#eingabefelder-projectEditPersonal input[type="text"]');
+    var isValid = true;
+    inputs.forEach(function(input) {
+        if (input.value.trim() === "") {
+            isValid = false;
+            input.classList.add("invalid");
+        } else {
+            input.classList.remove("invalid");
+        }
+    });
+
+    if (!isValid) {
+        document.getElementById("error-message-project").style.display = "block";
+        document.getElementById("error-message-project").textContent = "Alle Eingabefelder müssen ausgefüllt sein!";
+    } else {
+        document.getElementById("error-message-project").style.display = "none";
+        var values = [];
+        inputs.forEach(function(input) {
+            values.push(input.value);
+        });
+        console.log("Eingabefelder:", values.toString());
+        closeEditPersonalPopup();
+    }
+}
+
+
 </script>
     </body>
 
