--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -177,7 +177,7 @@
     </footer><!-- End: Footer Multi Column -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/script.min.js?h=a03f97f77fd20b7d142d0e1704392c63"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+ <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
     <script>
@@ -358,6 +358,8 @@ function closeEditPersonalPopup() {
 function updateProjectEditPersonalInputs() {
     var auswahl = document.getElementById("auswahl-projectEditPersonal").value;
     var eingabefelderDiv = document.getElementById("eingabefelder-projectEditPersonal");
+    var buttonsDiv = document.getElementById("buttons-projectEditPersonal");
+    buttonsDiv.innerHTML = "";
     eingabefelderDiv.innerHTML = ""; 
     if (auswahl === "anzeigen") {
         fetch(`https://cioban.de/api/project/employee/${selectedProjectId}`)
@@ -393,38 +395,60 @@ function updateProjectEditPersonalInputs() {
         employeeId.type = "text";
         employeeId.placeholder = "Mitarbeiter ID";
         eingabefelderDiv.appendChild(employeeId);
+
+        var applyButton = document.createElement("button");
+    applyButton.textContent = "Hinzufügen";
+    applyButton.style.color = "black";
+    applyButton.className = "btn text-truncate add-another-btn";
+    applyButton.onclick = function () {
+      applyAddEmployeeTeam();
+    };
+    buttonsDiv.appendChild(applyButton);
+        
     } else if (auswahl === "löschen") {
         var idInput = document.createElement("input");
         idInput.type = "text";
         idInput.placeholder = "ID";
         eingabefelderDiv.appendChild(idInput);
+
+        var applyButton = document.createElement("button");
+    applyButton.textContent = "Löschen";
+    applyButton.style.color = "black";
+    applyButton.className = "btn text-truncate add-another-btn";
+    applyButton.onclick = function () {
+      applyDeleteEmployeeTeam();
+    };
+    buttonsDiv.appendChild(applyButton);
     }
 } 
 
-function applyEditPersonalChanges() {
-    var inputs = document.querySelectorAll('#eingabefelder-projectEditPersonal input[type="text"]');
-    var isValid = true;
-    inputs.forEach(function(input) {
-        if (input.value.trim() === "") {
-            isValid = false;
-            input.classList.add("invalid");
-        } else {
-            input.classList.remove("invalid");
-        }
-    });
-
-    if (!isValid) {
-        document.getElementById("error-message-project").style.display = "block";
-        document.getElementById("error-message-project").textContent = "Alle Eingabefelder müssen ausgefüllt sein!";
-    } else {
-        document.getElementById("error-message-project").style.display = "none";
-        var values = [];
-        inputs.forEach(function(input) {
-            values.push(input.value);
-        });
-        console.log("Eingabefelder:", values.toString());
-        closeEditPersonalPopup();
+function applyAddEmployeeTeam (){
+    if (validateProject()) {
+    //hier soll ein ein Mitarbeiter einem Team und somit einem Projekt hinzugefügt werden
+    }else{
+        document.getElementById("error-message-projectEditPersonal").style.display = "block";
+        document.getElementById("error-message-projectEditPersonal").innerHTML = "Bitte füllen Sie alle Felder aus!";
     }
+}
+function applyDeleteEmployeeTeam (){
+    if (validateProject()) {
+    //hier soll ein ein Mitarbeiter einem Team und somit einem Projekt gelöscht werden
+    }else{
+        document.getElementById("error-message-projectEditPersonal").style.display = "block";
+        document.getElementById("error-message-projectEditPersonal").innerHTML = "Bitte füllen Sie alle Felder aus!";
+    }
+}
+
+function validateProject() {
+  var inputs = document.querySelectorAll(
+    '#eingabefelder-projectEditPersonal input[type="text"]'
+  );
+  for (var i = 0; i < inputs.length; i++) {
+    if (inputs[i].value.trim() === "") {
+      return false;
+    }
+  }
+  return true;
 }
 
 
