--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -399,9 +399,9 @@
                     .then(response => response.json())
                     .then(data => {
                         var teamDropdown = document.createElement("select");
-                        teamDropdown.id = "teamDropdown";
                         teamDropdown.style.width = "100%"; // Dropdown so breit wie das Eingabefeld
                         teamDropdown.placeholder = "Team auswählen";
+                        teamDropdown.id = "teamDropdown";
 
                         data.team.forEach(team => {
                             var option = document.createElement("option");
@@ -447,10 +447,10 @@
 
         function applyAddEmployeeTeam() {
             if (validateProjectEditPersonal()) {
-                var teamId = document.getElementById(teamDropdown).value;
             var employeeId = document.querySelector('input[type="text"]').value;
+            var teamId = document.getElementById("teamDropdown").value;
 
-            console.log(teamId, employeeId);
+            console.log(teamId);
 
 
                 //mitarbeiter id soll eingegeben werden und dann per fetch an das backend gesendet werden
