--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -448,10 +448,9 @@
         function applyAddEmployeeTeam() {
             if (validateProjectEditPersonal()) {
             var employeeId = document.querySelector('input[type="text"]').value;
-            var teamId = document.getElementById("teamDropdown");
+            var teamId = document.getElementById("teamDropdown").value;
 
             console.log(teamId);
-            console.log(teamId.value);
 
 
                 //mitarbeiter id soll eingegeben werden und dann per fetch an das backend gesendet werden
