--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -466,9 +466,9 @@
                     }
 
                     console.log("Erstellung erfolgreich!");
-                    displaySuccessMessage("Hinzufügen erfolgreich!");
+                    displaySuccessMessageEditProject("Hinzufügen erfolgreich!");
                 } catch (error) {
-                    displayErrorMessage("Fehler beim hinzufügen.");
+                    displayErrorMessageEditProject("Fehler beim hinzufügen.");
                 }
             } else {
                 document.getElementById("error-message-projectEditPersonal").style.display = "block";
