--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -468,6 +468,7 @@
                     console.log("Erstellung erfolgreich!");
                     displaySuccessMessageEditProject("Hinzufügen erfolgreich!");
                 } catch (error) {
+                    console.error("Fehler beim Erstellen des Mitarbeiters:", error);
                     displayErrorMessageEditProject("Fehler beim hinzufügen.");
                 }
             } else {
