--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -99,6 +99,7 @@
                 <!--         <button style="color: black" class="btn text-truncate add-another-btn" onclick="applyEditPersonalChanges()">Anwenden</button> -->
             </div>
             <div id="error-message-projectEditPersonal" class="error-message" style="display: none;"></div>
+            <div id="success-message-projectEditPersonal" class="success-message" style="display: none;"></div>
         </div>
     </div>
     <div class="orgTable" style="z-index: 1;">
