--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -386,15 +386,6 @@
                         });
                     })
                     .catch(error => console.error('Error fetching teams:', error));
-
-                /*                var applyButton = document.createElement("button");
-                               applyButton.textContent = "Löschen";
-                               applyButton.style.color = "black";
-                               applyButton.className = "btn text-truncate add-another-btn";
-                               applyButton.onclick = function () {
-                                   applyDeleteEmployeeTeam();
-                               };
-                               buttonsDiv.appendChild(applyButton); */
             }
 
             function loadEmployeesDropdown(teamId) {
@@ -428,15 +419,20 @@
                         eingabefelderDiv.appendChild(employeeDropdown); // Mitarbeiter-Dropdown hinzufügen
                     })
                     .catch(error => console.error('Error fetching employees:', error));
+                var applyButton = document.getElementById("applyDeleteButton");
 
-                var applyButton = document.createElement("button");
-                applyButton.textContent = "Löschen";
-                applyButton.style.color = "black";
-                applyButton.className = "btn text-truncate add-another-btn";
-                applyButton.onclick = function () {
-                    applyDeleteEmployeeTeam();
-                };
-                buttonsDiv.appendChild(applyButton);
+                if (!applyButton) {
+                    // Wenn der Button noch nicht existiert, erstelle ihn
+                    applyButton = document.createElement("button");
+                    applyButton.textContent = "Löschen";
+                    applyButton.style.color = "black";
+                    applyButton.className = "btn text-truncate add-another-btn";
+                    applyButton.id = "applyDeleteButton";
+                    applyButton.onclick = function () {
+                        applyDeleteEmployeeTeam();
+                    };
+                    buttonsDiv.appendChild(applyButton);
+                }
             }
 
         }
